# terminal_dungeon

./: .gitignore  LICENSE  README.md  controller.py  dungeon_crawler.py  map1.json  map1.txt  maps.py  player.py  pyproject.toml  renderer.py  requirements.txt  terminal_dungeon.py  text_to_json.py  texture1.json  texture1.txt  texture2.json  texture2.txt  texture3.json  tree.json
.github/workflows/: python-publish.yaml
maps/: map1.sprites
src/terminal_dungeon/: __init__.py  __main__.py  camera.py  engine.py  raycaster.py  read_assets.py
src/terminal_dungeon/assets/: dragon.txt  dungeon.txt  sprites.json  tree.txt  wall_1.txt  wall_2.txt
terminal_dungeon/: __main__.py  controller.py  map_loader.py  maps.py  player.py  renderer.py
terminal_dungeon/maps/: map1.sprites  map_1.sprites  map_1.txt
terminal_dungeon/sprite_textures/: dragon.txt
